syntax = "proto3";

option csharp_namespace = "Common.Grpc";
import "google/protobuf/timestamp.proto";
import "baseTypes.proto";


service GrpcUserService{
  rpc LoginUser(GrpcUserLoginRequest) returns (GrpcUserLoginResponse);
  rpc RegisterUser(GrpcUserRegisterRequest) returns (GrpcUserRegisterResponse);
  rpc UserInfo(GrpcUserInfoRequest) returns (GrpcUserInfoResponse);
  rpc AddRoleToUser(GrpcAddRoleToUserRequest) returns (baseTypes.GrpcMethodResponse);
  rpc RemoveRoleFromUser(GrpcRemoveRoleFromUserRequest) returns (baseTypes.GrpcMethodResponse);
  rpc AddPermissionToRole(GrpcAddPermissionToRoleRequest) returns (baseTypes.GrpcMethodResponse);
  rpc RemovePermissionFromRole(GrpcRemovePermissionFromRoleRequest) returns (baseTypes.GrpcMethodResponse);
}

message GrpcAddRoleToUserRequest{
  int32 userId = 1;
  int32 roleId = 2;
}

message GrpcRemoveRoleFromUserRequest{
  int32 userId = 1;
  int32 roleId = 2;
}

message GrpcAddPermissionToRoleRequest{
  int32 roleId = 1;
  int32 permissionId = 2;
}

message GrpcRemovePermissionFromRoleRequest{
  int32 roleId = 1;
  int32 permissionId = 2;
}

message GrpcUserLoginRequest{
  string email = 1;
  string password = 2;
}

message GrpcUserLoginResponse{
  bool success = 1;
  string token = 2;
  string message = 3;
}

message GrpcUserRegisterRequest{
  string email = 1;
  string nickname = 2;
  string password = 3;
  string passwordConfirm = 4;
}

message GrpcUserRegisterResponse{
  bool success = 1;
  string message = 2;
}

message GrpcUserInfoRequest{
  string token = 1;
}

message GrpcUserInfoResponse{
  string userId = 1;
  string email = 2;
  string nickname = 3;
  string userType = 4;
}